// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense correctly 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $95.22
  </p>
</div>
`;

exports[`should render ExpensesSummary with 2 expenses correctly 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $9,522,313.24
  </p>
</div>
`;

exports[`should render ExpensesSummary with no expenses correctly 1`] = `
<div>
  <p>
    No Expenses
  </p>
</div>
`;
